* [#124] Modified resource delete message to make it more readable

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -780,7 +780,12 @@
             <h4 class="modal-title" id="delete-resource-title">Delete Resource</h4>
           </div>
           <div class="modal-body">
-                <strong>THIS IS A PERMANENT ACTION </strong> that will delete the resource entirely. Keep a copy if you still need this information.
+                <strong>THIS IS A PERMANENT ACTION. </strong>
+                <ul>
+                  <li>This will delete the resource file.</li>
+                  <li>A copy of your resource file will not be retained by Hydroshare.</li>
+                  <li>We highly recommend that you download the latest copy of your resource file before confirming this action.</li>
+                </ul>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
