--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -39,6 +39,7 @@
 	</div>
 
     <div class="content-block">
+        <h3>Sharing</h3>
        {% if rights.statement %}
             <span class="rights-text">{{ rights.statement }} </span>
        {% endif %}
