* [#152] Fixed wrong occurrence of 'Private'

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -55,7 +55,7 @@
         <p>
             <strong>Sharing Status:</strong>
             {% if cm.public %}
-                <span>Private</span>
+                <span>Public</span>
             {% else %}
                 <span>Private</span>
             {% endif %}
