--- a/hs_rhessys_inst_resource/templates/pages/runmodel.html
+++ b/hs_rhessys_inst_resource/templates/pages/runmodel.html
@@ -274,6 +274,9 @@
       {% endif %}
       <div>
 	<em>Model command line parameters:</em><br />{{ run.model_command_line_parameters }}<br /><br />
+	{% if run.TEC_FILE %}
+	<em>TEC file:</em><br /><pre>{{ run.TEC_FILE }}</pre><br /><br />
+	{% endif %}
 	<em>Time started:</em>&nbsp;{{ run.date_started }}<br />
 	<em>Time finished:</em>&nbsp;<span id="date-finished-{{ run.token}}">{{ run.date_finished }}</span><br />
       </div>
