Updated long poll() function to attempt to recover from timeout errors (not sure this is the right way, but we'll see; errors are transient and difficult to test)

--- a/hs_rhessys_inst_resource/templates/pages/runmodel.html
+++ b/hs_rhessys_inst_resource/templates/pages/runmodel.html
@@ -306,7 +306,7 @@
             } else {
               poll();
             }
-          }, dataType: "json"});
+          }, dataType: "json", error: poll});
         }, 30000);
       })();
     </script>
