fixed some issues and further implemented multi-band metadata UI editing

--- a/hs_geo_raster_resource/templates/pages/rasterresource.html
+++ b/hs_geo_raster_resource/templates/pages/rasterresource.html
@@ -63,13 +63,13 @@
                                 <div class="col-sm-4"><strong>VariableUnit:</strong></div>
                                 <div class="col-sm-8">{{ band.variableUnit }}</div>
                             </div>
-                            {% if bandInformation.method %}
+                            {% if band.method %}
                                 <div class="row">
                                     <div class="col-sm-4"><strong>Method:</strong></div>
                                     <div class="col-sm-8">{{ band.method }}</div>
                                 </div>
                             {% endif %}
-                            {% if bandInformation.comment %}
+                            {% if band.comment %}
                                 <div class="row">
                                     <div class="col-sm-4"><strong>Comment:</strong></div>
                                     <div class="col-sm-8">{{ band.comment }}</div>
