--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -17,14 +17,14 @@
         {% endif %}
 
         <a id="share" href="#sharing">
-            <span data-toggle="tooltip" data-placement="auto" title="Share" class="glyphicon glyphicon-share icon-button btn-share"></span>
+            <span data-toggle="tooltip" data-placement="auto" title="Share" class="glyphicon glyphicon-share-alt icon-button btn-share"></span>
         </a>
 
         {% if page.perms.change %}
         <form class="inline" action="{{ cm.get_absolute_url }}" method="post">
             {% csrf_token %}
             <input name="resource-mode" type="hidden" value="edit"/>
-            <button id="edit-metadata" type="submit" data-toggle="tooltip" data-placement="auto" title="Edit" class="glyphicon glyphicon-edit icon-button btn-edit"></button>
+            <button id="edit-metadata" type="submit" data-toggle="tooltip" data-placement="auto" title="Edit" class="glyphicon glyphicon-pencil icon-button btn-edit"></button>
         </form>
         {% endif %}
     </div>
@@ -72,7 +72,6 @@
                 {% endif %}
              {% endif %}
 
-
             {% if cm.public %}
                 <span>(This resource can be viewed and downloaded by anyone)</span>
             {% else %}
@@ -115,7 +114,7 @@
                                 {% endfor %}
                             </select>
                             <input name="t" value="owners" type="hidden"/>
-                            <button type="submit" class="btn btn-update-list pull-left btn-default">Update access list</button>
+                            <button type="submit" class="btn btn-update-list pull-left btn-default glyphicon"><span class="button-label">&nbspUpdate access list</span></button>
                             <span data-toggle="tooltip" data-placement="auto" title='Hold down "Control", or "Command" on a Mac, to select more than one.' class="glyphicon glyphicon-info-sign info-icon"></span>
                         </form>
                         <form class="form-inline" action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/" method="POST" style="padding-top:0.3em">
@@ -123,7 +122,7 @@
                             <div class="form-group">
                                 <input name="t" value="add_owner" type="hidden"/>
                                 {{ add_owner_user_form.user }}
-                                <button type="submit" class="btn btn-success pull-left">Add User</button>
+                                <button type="submit" class="btn btn-success pull-left glyphicon glyphicon-plus"><span class="button-label">&nbspAdd User</span></button>
                             </div>
                         </form>
                     </div>
@@ -140,7 +139,7 @@
                                 {% endfor %}
                             </select>
                             <input name="t" value="edit_users" type="hidden"/>
-                            <button type="submit" class="btn btn-update-list btn-default pull-left">Update access list</button>
+                            <button type="submit" class="btn btn-update-list pull-left btn-default glyphicon"><span class="button-label">&nbspUpdate access list</span></button>
                             <span data-toggle="tooltip" data-placement="auto" title='Hold down "Control", or "Command" on a Mac, to select more than one.' class="glyphicon glyphicon-info-sign info-icon"></span>
                         </form>
                         <form class="form-inline" action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/" method="POST" style="padding-top:0.3em">
@@ -148,7 +147,7 @@
                             <div class="form-group">
                                 <input name="t" value="add_edit_user" type="hidden"/>
                                 {{ add_edit_user_form.user }}
-                                <button type="submit" class="btn btn-success pull-left">Add User</button>
+                                <button type="submit" class="btn btn-success pull-left glyphicon glyphicon-plus"><span class="button-label">&nbspAdd User</span></button>
                             </div>
                         </form>
                     </div>
@@ -165,7 +164,7 @@
                                     {% endfor %}
                                 </select>
                                 <input name="t" value="edit_groups" type="hidden"/>
-                                <button type="submit" class="btn btn-update-list btn-default pull-left">Update access list</button>
+                                <button type="submit" class="btn btn-update-list pull-left btn-default glyphicon"><span class="button-label">&nbspUpdate access list</span></button>
                                 <span data-toggle="tooltip" data-placement="auto" title='Hold down "Control", or "Command" on a Mac, to select more than one.' class="glyphicon glyphicon-info-sign info-icon"></span>
                         </form>
                         <form class="form-inline" action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/" method="POST" style="padding-top:0.3em">
@@ -173,7 +172,7 @@
                             <div class="form-group">
                                 <input name="t" value="add_edit_group" type="hidden"/>
                                 {{ add_edit_group_form.user }}
-                                <button type="submit" class="btn btn-success pull-left">Add Group</button>
+                                <button type="submit" class="btn btn-success pull-left glyphicon glyphicon-plus"><span class="button-label">&nbspAdd Group</span></button>
                             </div>
                         </form>
                     </div>
@@ -191,7 +190,7 @@
                                 {% endfor %}
                             </select>
                             <input name="t" value="view_users" type="hidden"/>
-                            <button type="submit" class="btn btn-update-list btn-default pull-left">Update access list</button>
+                            <button type="submit" class="btn btn-update-list pull-left btn-default glyphicon"><span class="button-label">&nbspUpdate access list</span></button>
                             <span data-toggle="tooltip" data-placement="auto" title='Hold down "Control", or "Command" on a Mac, to select more than one.' class="glyphicon glyphicon-info-sign info-icon"></span>
                         </form>
                         <form class="form-inline" action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/" method="POST" style="padding-top:0.3em">
@@ -199,7 +198,7 @@
                             <div class="form-group">
                                 <input name="t" value="add_view_user" type="hidden"/>
                                 {{ add_view_user_form.user }}
-                                <button type="submit" class="btn btn-success pull-left">Add User</button>
+                                <button type="submit" class="btn btn-success pull-left glyphicon glyphicon-plus"><span class="button-label">&nbspAdd User</span></button>
                             </div>
                         </form>
                     </div>
@@ -216,7 +215,7 @@
                                 {% endfor %}
                             </select>
                             <input name="t" value="view_groups" type="hidden"/>
-                            <button type="submit" class="btn btn-update-list btn-default pull-left">Update access list</button>
+                            <button type="submit" class="btn btn-update-list pull-left btn-default glyphicon"><span class="button-label">&nbspUpdate access list</span></button>
                             <span data-toggle="tooltip" data-placement="auto" title='Hold down "Control", or "Command" on a Mac, to select more than one.' class="glyphicon glyphicon-info-sign info-icon"></span>
                         </form>
                         <form class="form-inline" action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/" method="POST" style="padding-top:0.3em">
@@ -224,7 +223,7 @@
                             <div class="form-group">
                                 <input name="t" value="add_view_group" type="hidden"/>
                                 {{ add_view_group_form.user }}
-                                <button type="submit" class="btn btn-success pull-left">Add Group</button>
+                                <button type="submit" class="btn btn-success pull-left glyphicon glyphicon-plus"><span class="button-label">&nbspAdd Group</span></button>
                             </div>
                         </form>
                     </div>
@@ -396,7 +395,7 @@
                         {% if contributors %}
                             <hr>
                             <div class="division-title"><p>Contributors</p></div>
-                            <table class="table table-striped table-hover">
+                            <table class="table table-striped">
                                 <thead>
                                     <tr>
                                         <th>Name</th>
